Fix background image issue on small devices

--- a/src/index.css
+++ b/src/index.css
@@ -54,15 +54,18 @@ h1, h2, h3, span {
 
 .background-image {
   background-image: url("./assets/sprites/background/GV_Dungeon3_background.png");
-  background-size: 100%;
+  background-size: cover;
   left: 0;
   top: 0;
-  background-position: center calc(100px + 50%);
+  background-position: 100% 20%;
   height: 100vh;
+  background-repeat: no-repeat;
+  
   position: fixed;
   width: 100vw;
   z-index: -1;
 }
+
 
 .background-image-front {
   background-image: url("./assets/sprites/background/GV_Dungeon3_b.png");
